fix flickering

--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -21,12 +21,12 @@
     --theme: #302c2c; /* rgb(29, 30, 32); */
     --entry:  #222222; /* rgb(46, 46, 51); */
     --primary: rgb(218, 218, 219);
-    --secondary: rgb(155, 156, 157);
-    --tertiary: rgb(65, 66, 68);
+    --secondary: #302c2c;
+    --tertiary: rgb(214, 214, 214);
     --content: rgb(196, 196, 197);
     --code-block-bg: #1a1a1a; /* rgb(46, 46, 51); */
     --code-bg: #1a1a1a; /* rgb(55, 56, 62); */
-    --border: rgb(51, 51, 51);
+    --border: #222222;
 }
 
 .list {
